--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -74,7 +74,7 @@ jobs:
         languages: ${{ matrix.language }}
         config: |
           paths-ignore:
-            - '***/*.test.js'
+            - '**/*.test.js'
         build-mode: ${{ matrix.build-mode }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
