--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -75,6 +75,8 @@ jobs:
         config: |
           paths-ignore:
             - '**/*.test.js'
+          queries:
+            - uses: security-and-quality
         build-mode: ${{ matrix.build-mode }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
