--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -30,7 +30,7 @@ jobs:
                     restore-keys: ${{ runner.os }}-m2-
                     
             -   name: Build with Maven
-                run: mvn --no-transfer-progress verify
+                run: mvn -B package --file pom.xml --no-transfer-progress verify
                 
             -   name: "Set up QEMU"
                 if: runner.os == 'Linux'
