--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -72,11 +72,8 @@ jobs:
       uses: github/codeql-action/init@v4
       with:
         languages: ${{ matrix.language }}
-        config: |
-          paths-ignore:
-            - '**/*.test.js'
-          queries:
-            - uses: security-and-quality
+        config-file: pranamphd/security-team-codeql-config/codeql/codeql-config.yml
+        external-reposirory-token: ${{ secrets.ACCESS_TOKEN }}
         build-mode: ${{ matrix.build-mode }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
