--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,8 +16,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '18 21 * * 2'
+  # schedule:
+  #   - cron: '18 21 * * 2'
 
 jobs:
   analyze:
